# services

./: .env.local.example  .gitignore  CLAUDE.md  DATA_MODEL_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_VALIDATION.md  README.md  REFACTORING_SUMMARY.md  deploy-staging.sh  deployment-preflight.sh  docker-compose.local.yml  init-multiple-dbs.sh  test_refactoring.py
.claude/: settings.local.json
artemis/: .env.example  Dockerfile  README.md  SPEC.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
artemis/artemis/: __init__.py
artemis/artemis/api/: __init__.py  main.py
artemis/artemis/core/: __init__.py  agent.py  aggregator.py  auth.py  client.py  dev_tools.py  external_agents.py  goal_evolution.py  memory.py  module.py  monitor.py  outcomes.py  patterns.py  persona.py  rate_limit.py  registry.py  settings.py  signals.py
artemis/artemis/modules/: __init__.py  assets.py  entrepreneurship.py  finance.py  fitness.py  nutrition.py  work.py
artemis/artemis/routers/: agent.py  briefing.py  dashboard.py  evolution.py  memory.py  modules.py  monitor.py  multimodal.py  research.py  synthesis.py  workers.py
artemis/config/: modules.yaml
artemis/docs/: ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION.md
artemis/memory/: goal_health.json  life_vision.md  monitor_log.json  notifications.json  proposals.json  running_context.json  signals.json
artemis/memory/insights/: decisions.md  patterns.md  stoic_quotes.json
artemis/memory/outcomes/: 2026-04.json
artemis/memory/sessions/: 2026-04-20.md  2026-04-21.md
artemis/tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_platform.py
artemis/tests/unit/: test_module.py  test_registry.py  test_work_module.py
auth/: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  main.py  migrate_db.py  pyproject.toml  requirements.txt
auth/auth/api/: main.py
auth/auth/core/: audit.py  database.py  jwt_service.py  redis_client.py  settings.py
auth/auth/routers/: auth.py  billing.py  google.py  teams.py
auth/migrations/: env.py
auth/migrations/versions/: 0001_initial_schema.py  0002_teams_and_audit.py
auth/tests/: test_audit.py  test_auth.py  test_billing.py  test_teams.py
common/: README.md  __init__.py  app_factory.py  artemis_auth.py  aws_secrets.py  cache.py  database.py  error_handlers.py  logging_config.py  metrics.py  middleware.py  pyproject.toml  redis_client.py  requirements.txt  settings.py  tasks.py  utils.py
common/models/: __init__.py  base.py
content-planner/: .env.example  Dockerfile  docker-compose.yml  main.py  migrate_db.py  pyproject.toml  requirements.txt
content-planner/core/: database.py  settings.py
content-planner/migrations/versions/: 0001_initial_schema.py
content-planner/routers/: artemis.py  auth.py  content_items.py  healthcheck.py  pillars.py  playlists.py  queue.py  sessions.py  sources.py  summaries.py  user_settings.py
content-planner/schemas/: models.py
content-planner/tests/: conftest.py  test_content_items.py  test_health.py  test_pillars_sources.py  test_settings.py
home-manager/: Dockerfile  README.md  SPEC.md  docker-compose.yml  main.py  main.py.backup  migrate_db.py  pyproject.toml  requirements.txt  requirements.yaml
home-manager/core/: settings.py
home-manager/migrations/: env.py
home-manager/migrations/versions/: 0001_initial_schema.py
home-manager/routers/: artemis.py  auth.py  healthcheck.py  work_planner.py
home-manager/tests/: __init__.py  conftest.py  test_artemis.py  test_tasks.py
meal-planner/: Dockerfile  README.md  SPEC.md  docker-compose.yml  main.py  migrate_db.py  pyproject.toml  requirements.txt  requirements.yaml
meal-planner/core/: settings.py
meal-planner/routers/: artemis.py
meal-planner/tests/: __init__.py  conftest.py  test_artemis.py  test_meals.py
trip-planner/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
trip-planner/core/: database.py  settings.py
trip-planner/routers/: artemis.py  auth.py  expenses.py  itinerary.py  packing.py  trips.py
trip-planner/schemas/: models.py
trip-planner/tests/: test_trips.py
work-planner/: .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.yml  main.py  migrate_db.py  pyproject.toml  requirements.txt
work-planner/core/: auth_service.py  database.py  settings.py
work-planner/models/: goals.py  plans.py  tasks.py
work-planner/routers/: artemis.py  auth.py  goals.py  healthcheck.py  planners.py  plans.py
work-planner/scripts/: bootstrap.py
work-planner/tests/: conftest.py  test_auth.py  test_goals.py  test_health.py  test_planners.py  test_plans.py
workout-planner/: .coveragerc  .env  ADMIN_CREDENTIALS.md  Dockerfile  MIGRATION_READINESS_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  QUICK_START.md  README.md  SPEC.md  ai_chat_service.py  ai_engine.py  alembic.ini  auth_service.py  aws_secrets.py  cache.py  cleanup_test_users.py  database.py  dev.sh  docker-compose.yml  fitness_dev.db  generate_codes.py  main.py  metrics.py  pyproject.toml  pytest.ini  redis_client.py  requirements.txt  requirements.yaml  settings.py
workout-planner/core/: __init__.py  ai_chat_service.py  auth_service.py  aws_secrets.py  cache.py  database.py  error_handlers.py  logging_config.py  metrics.py  redis_client.py  settings.py
workout-planner/docs/: CI_CD_GUIDE.md  DOCKER_COMPOSE_QUICKSTART.md
workout-planner/migrations/: README.md  env.py
workout-planner/models/: ai_engine.py
workout-planner/routers/: artemis.py  auth.py  chat.py  daily_plans.py  goals.py  health.py  healthcheck.py  meals.py  murph.py  readiness.py  strength.py  swim.py  waitlist.py  weekly_plans.py  workouts.py
workout-planner/scripts/: make_admin.py
workout-planner/tests/: LOAD_TESTING.md  conftest.py  test_ai_engine.py  test_api.py  test_artemis.py  test_auth.py  test_caching.py  test_chat.py  test_daily_plans.py  test_e2e.py  test_health.py  test_helpers.py  test_integration.py  test_meals.py  test_readiness.py  test_redis_blacklist.py  test_weekly_plans.py
(+73 files in other folders)
