[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "artemis-auth"
version = "1.0.0"
description = "Shared authentication service for the Artemis Personal OS platform"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["auth*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
