[project]
name = "content-planner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "PyJWT>=2.8.0",
    "httpx>=0.24.0",
    "prometheus-client>=0.17.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "coverage>=7.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.backends.legacy:build"
